feat: update after cleanup hooks